--- a/.travis.yml
+++ b/.travis.yml
@@ -64,10 +64,10 @@ jobs:
 
 # Run unit tests on Linux and Mac
 
-  - env: SET=test00
-
-  - env: SET=test00
-    os: osx
+#  - env: SET=test00
+#
+#  - env: SET=test00
+#    os: osx
 
 # Compile the example application
 # using the build configurations from full makeBaseApp example
@@ -75,56 +75,56 @@ jobs:
   - env: SET=test01
 
 # On the side: test ADD_MODULES
-  - env: SET=test01 ADD_MODULES=ipac
-    compiler: clang
-
-  - env: VV="" SET=test01
-
-  - env: SET=test01 EXTRA="CMD_CXXFLAGS=-std=c++11"
-
-  - env: SET=test01 EXTRA="CMD_CXXFLAGS=-std=c++11"
-    compiler: clang
-
-# trusty is pretty close to RHEL7
-  - env: SET=test01
-    dist: trusty
-
-  - env: SET=test01 EXTRA="CMD_CXXFLAGS=-std=c++11"
-    dist: trusty
-
-# Cross-compilation to Windows using MinGW and WINE
-
-  - env: SET=test01 WINE=32 TEST=NO STATIC=YES
-    compiler: mingw
-
-  - env: SET=test01 WINE=64 TEST=NO STATIC=YES
-    compiler: mingw
-
-# dynamic (DLL) builds are broken on xenial
-  - env: SET=test01 WINE=32 TEST=NO STATIC=NO
-    dist: bionic
-    compiler: mingw
-
-  - env: SET=test01 WINE=64 TEST=NO STATIC=NO
-    dist: bionic
-    compiler: mingw
-
-# Cross-compilation to RTEMS
-# (needs EPICS Base >= 3.16.2)
-
-  - env: SET=test01 RTEMS=4.10 TEST=NO
-
-  - env: SET=test01 RTEMS=4.9 TEST=NO
+#  - env: SET=test01 ADD_MODULES=ipac
+#    compiler: clang
+#
+#  - env: VV="" SET=test01
+#
+#  - env: SET=test01 EXTRA="CMD_CXXFLAGS=-std=c++11"
+#
+#  - env: SET=test01 EXTRA="CMD_CXXFLAGS=-std=c++11"
+#    compiler: clang
+#
+## trusty is pretty close to RHEL7
+#  - env: SET=test01
+#    dist: trusty
+#
+#  - env: SET=test01 EXTRA="CMD_CXXFLAGS=-std=c++11"
+#    dist: trusty
+#
+## Cross-compilation to Windows using MinGW and WINE
+#
+#  - env: SET=test01 WINE=32 TEST=NO STATIC=YES
+#    compiler: mingw
+#
+#  - env: SET=test01 WINE=64 TEST=NO STATIC=YES
+#    compiler: mingw
+#
+## dynamic (DLL) builds are broken on xenial
+#  - env: SET=test01 WINE=32 TEST=NO STATIC=NO
+#    dist: bionic
+#    compiler: mingw
+#
+#  - env: SET=test01 WINE=64 TEST=NO STATIC=NO
+#    dist: bionic
+#    compiler: mingw
+#
+## Cross-compilation to RTEMS
+## (needs EPICS Base >= 3.16.2)
+#
+#  - env: SET=test01 RTEMS=4.10 TEST=NO
+#
+#  - env: SET=test01 RTEMS=4.9 TEST=NO
 
 # Other gcc versions (adding as an extra package)
 
-  - env: SET=test01
-    compiler: gcc-6
-    addons: { apt: { packages: ["g++-6"], sources: ["ubuntu-toolchain-r-test"] } }
-
-  - env: SET=test01
-    compiler: gcc-7
-    addons: { apt: { packages: ["g++-7"], sources: ["ubuntu-toolchain-r-test"] } }
+#  - env: SET=test01
+#    compiler: gcc-6
+#    addons: { apt: { packages: ["g++-6"], sources: ["ubuntu-toolchain-r-test"] } }
+#
+#  - env: SET=test01
+#    compiler: gcc-7
+#    addons: { apt: { packages: ["g++-7"], sources: ["ubuntu-toolchain-r-test"] } }
 
 # MacOS build
 
@@ -136,11 +136,11 @@ jobs:
 # Base 3.15 builds
 # ================
 
-  - env: BASE=R3.15.7 SET=test01
-
-  - env: BASE=R3.15.7 SET=test01 WINE=64 TEST=NO STATIC=YES
-    dist: bionic
-    compiler: mingw
+#  - env: BASE=R3.15.7 SET=test01
+#
+#  - env: BASE=R3.15.7 SET=test01 WINE=64 TEST=NO STATIC=YES
+#    dist: bionic
+#    compiler: mingw
 
 # The DLL build for this Base version is known to fail
 #  - env: BASE=R3.15.7 SET=test01 WINE=64 TEST=NO STATIC=NO
@@ -150,11 +150,11 @@ jobs:
 # Cross-compilation to RTEMS
 # (needs EPICS Base >= 3.16.2)
 
-  - env: BASE=R3.16.2 SET=test01 RTEMS=4.10 TEST=NO
-    dist: trusty
-
-  - env: BASE=R3.16.2 SET=test01 RTEMS=4.9 TEST=NO
-    dist: trusty
+#  - env: BASE=R3.16.2 SET=test01 RTEMS=4.10 TEST=NO
+#    dist: trusty
+#
+#  - env: BASE=R3.16.2 SET=test01 RTEMS=4.9 TEST=NO
+#    dist: trusty
 
 # SNCSEQ 2.2.7 fails to build on MacOS; currently needs master
   - env: BASE=R3.15.7 SET=test01 SNCSEQ=master
