test run travis. To be reverted

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,8 @@ addons:
     update: true
 
 install:
+  - python3 --version
+  - python3 travis/githubreleases.py epics-modules asyn
   - ./travis/prepare.sh
 
 script:
